<resources>
    <string name="app_name">Farm to Home - B2B</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_internet">"No internet "</string>
    <string name="no_content">No content to show</string>
    <string name="unauthrozed">UnAuthorized</string>
    <string name="error_occurred">Error Occurred!</string>
    <string name="enter_phone_to_reset">Please enter your registered phone number to reset your password</string>
    <string name="enter_product">Enter Product</string>
    <string name="product">Product</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="calender_icon">calender_icon</string>
    <string name="signing_out_warning">Are you sure to sign out?</string>
    <string name="sign_out">Sign Out</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="product_name">Product Name</string>
    <string name="unit">Unit</string>
    <string name="_0_rs">1</string>
    <string name="quantity">Quantity</string>
    <string name="_10">10</string>
    <string name="price">Price</string>
    <string name="kg">Kg</string>
</resources>