<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_edit_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_edit_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="8dp"
        android:background="@drawable/rounded_edittext_bg"
        android:elevation="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/cancel_product_image_cart"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/close_black_icon"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:layout_gravity="end"
                android:paddingRight="8dp"
                android:textColor="#99000000"
                app:layout_constraintBottom_toBottomOf="@+id/product_name_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/product_name_cart" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_cart_customer_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="20dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_edittext_bg"
                        app:cardCornerRadius="10dp"
                        android:layout_marginTop="20sp">
                        <LinearLayout
                            android:id="@+id/ll_customer_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="10dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:text="Customer: "/>
                                <TextView
                                    android:id="@+id/tv_customer_name_edit_dialog"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:fontFamily="@font/montserrat"
                                    android:text="Customer Name" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="10dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:text="Request ID: "/>
                                <TextView
                                    android:id="@+id/tv_customer_order_req_id"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:fontFamily="@font/montserrat"
                                    android:text="12345" />
                            </LinearLayout>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Change Delivery Date"
                                android:textStyle="bold"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/montserrat"
                                android:layout_marginStart="15dp"/>

                            <LinearLayout
                                android:id="@+id/ll_delivery_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginEnd="10dp"
                                android:paddingBottom="5dp"
                                tools:ignore="RtlSymmetry">

                                <TextView
                                    android:id="@+id/tv_delivery_date_edit_dialog"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/montserrat"
                                    android:paddingStart="15dp"
                                    android:background="@drawable/rounded_edittext_bg"
                                    android:text="@string/dd_mm_yyyy"
                                    android:textSize="18sp" />
                                <ImageView
                                    android:id="@+id/iv_date_picker_edit"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:src="@drawable/calendar"/>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent"
                tools:context=".fragments.CreateRequestFragment">



                <Spinner
                    android:id="@+id/sp_add_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/enter_product"
                    android:textSize="16sp"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:layout_margin="5dp">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_edit_item_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="8dp">
                <LinearLayout
                    android:id="@+id/ll_select_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add Product"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/montserrat"
                        android:layout_marginStart="15dp"/>


                        <AutoCompleteTextView
                            android:id="@+id/et_select_product_edit"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:paddingStart="5dp"
                            android:ems="10"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:fontFamily="@font/montserrat"
                            android:background="@drawable/rounded_edittext_bg"
                            android:hint="@string/enter_product"
                            android:inputType="textPersonName"/>
                    <TextView
                        android:id="@+id/tv_product_quantity_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/montserrat"
                        android:layout_marginStart="15dp"/>

                    <EditText
                        android:id="@+id/et_select_product_quantity_edit"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:ems="10"
                        android:maxLines="1"
                        android:maxLength="4"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_edittext_bg"
                        android:hint="@string/enter_quantity"
                        android:inputType="number"
                        android:layout_marginBottom="5dp"/>
                    <Button
                        android:id="@+id/btn_update_cart_edit_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="80dp"
                        android:minHeight="30dp"
                        android:paddingLeft="30dp"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="10dp"
                        android:text="Add Product"
                        android:textColor="@color/white"
                        android:background="@drawable/rounded_primary_background" />
                </LinearLayout>
                </androidx.cardview.widget.CardView>
                <Button
                    android:id="@+id/btn_update_cart_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:minHeight="48dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:text="Update Order"
                    android:background="@drawable/rounded_primary_background" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</layout>